--- a/src/Header.css
+++ b/src/Header.css
@@ -13,3 +13,30 @@
   height: 40px;
   margin-left: 5px;
 }
+
+.header__middle {
+  display: flex;
+  align-items: center;
+  flex: 0.7;
+  align-items: center;
+  background-color: whitesmoke;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.header__middle > .MuiSvgIcon-root {
+  color: gray;
+}
+
+.header__middle > input {
+  border: none;
+  width: 100%;
+  padding: 10px;
+  outline-width: 0;
+  font-size: medium;
+  background-color: transparent;
+}
+.header__right {
+  display: flex;
+  padding-right: 20px;
+}
