--- a/src/EmailList.css
+++ b/src/EmailList.css
@@ -3,6 +3,17 @@
   overflow: scroll;
 }
 
+/* Hides scrollbar for Chrome, Safari & Opera*/
+.emailList::-webkit-scrollbar {
+  display: none;
+}
+
+/*Hides scrollbar for IE, Edge and FireFox*/
+.emailList {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 .emailList__settings {
   position: sticky;
   top: 0;
