--- a/src/Header.css
+++ b/src/Header.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid whitesmoke;
+  margin: 5px;
 }
 .header__left {
   display: flex;
