--- a/src/SidebarOption.css
+++ b/src/SidebarOption.css
@@ -16,7 +16,7 @@
 .sidebarOption--active > p,
 .sidebarOption--active > h3 {
   background-color: white;
-  color: #c04b37;
+  color: #041e49;
   font-weight: 800 !important;
 }
 
